--- a/examples/simple_gtp_router.p4app/simple_gtp_router.config
+++ b/examples/simple_gtp_router.p4app/simple_gtp_router.config
@@ -7,3 +7,4 @@ table_add forward set_dmac 10.0.0.10 => 00:04:00:00:00:00
 table_add forward set_dmac 10.0.1.10 => 00:04:00:00:00:01
 table_add ipv4_lpm set_nhop 10.0.0.10/32 => 10.0.0.10 1
 table_add ipv4_lpm set_nhop 10.0.1.10/32 => 10.0.1.10 2
+table_add gtp_forward rewrite_teid 2 => 73
